styles.css
/* ... */
/* Desktop Content */
@media (min-width: 768px) {
    html,
    body {
        overflow: hidden;
    }

    .desktop-content {
        display: block;
        padding-top: 25%;
        /* padding-bottom: 25%; */
    }

    .mobile-content {
        display: none;
    }

    .sidebar-row {
        height: 100vh;
    }

    .sidebar {
        height: 100vh;
    }

    .col-md-9 {
        height: 100vh;
        min-height: 0;
    }

    #scrollbox {
        height: 100%;
        min-height: 0;
        overflow-y: auto;
        overflow-x: hidden;
    }

    .sidebar-stack {
        margin-block: auto;
    }

    section {
        min-height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

.sidebar .navbar-nav {
    width: 100%;
}

.sidebar .navbar-nav>.nav-item {
    width: 100%;
}

.n-link {
    display: block;
    width: 100%;
    text-decoration: none;
    color: var(--gray60);
    padding: var(--margin-xs);
    padding-left: var(--margin-xxl);
    background-color: transparent;
    transition: ease 0.25s;
}

.n-link:hover {
    background-color: var(--blue30);
    transition: ease 0.25s;
}

.n-link.active, .n-link:active {
    border-left: var(--orange50) solid 8px;
    background-color: var(--blue30);
    color: white;
    transition: ease 0.25s;
}

.contact-icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: var(--margin-s);
    margin-top: var(--margin-l);
    color: var(--gray80);
    border-radius: 100%;
}

.contact-icon {
    border-radius: 0.5rem;
    background-color: transparent;
    color: var(--gray60);
    transition: ease 0.25s;
    padding: var(--margin-xs);
    font-size: 0.5rem;
}

.contact-icon:hover {
    color: white;
    background-color: var(--blue30);
    transition: ease 0.25s;
}

.contact-mobile {
    margin-top: var(--margin-m);
    padding-top: var(--margin-m);
    border-top: 2px solid var(--gray60);
}

.icon-link {
    font-size: 2rem;
    /* padding: var(--margin-s); */
    text-decoration: none;
    color: var(--gray60);
}

a {
    color: white;
    text-decoration: none;
}

a:active {
    color: var(--orange50);
}

p {
    color: var(--gray60);
}

section {
    border-bottom: var(--blue5) solid 4px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#scrollbox {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
}

.skill-images {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.skill-image {
    display: inline;
    width: 3rem;
    margin: 1rem auto;
    align-items: center;
}

/* Star Particle Animations
 * 
 * Credit: https://csscrafter.com/
 */

.bg-animation {
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: 0;
    pointer-events: none;
}
/* ... */

